# aio17track

./: .gitignore  LICENSE  README.md  SPEC.md  index.html  pyproject.toml
.github/workflows/: ci.yml  release.yml
aio17track/: __init__.py  __main__.py  _constants.py  carriers.py  cli.py  client.py  enums.py  errors.py  models.py  transport.py  webhook.py
tests/: conftest.py  test_carriers.py  test_cli.py  test_client_mutations.py  test_client_reads.py  test_client_realtime.py  test_enums.py  test_errors.py  test_live.py  test_models.py  test_models_from_api.py  test_package.py  test_transport.py  test_webhook.py
tests/fixtures/: README.md  getquota.json  gettrackinfo_correios_2151.json  gettrackinfo_exception_returning.json  gettrackinfo_yanwen_190012.json  gettracklist_page.json  register_already_registered.json  register_mixed.json  webhook_tracking_stopped.json
